<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    tools:background="@color/cardview_shadow_end_color">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <TextView
                android:id="@+id/userName_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="6dp" />

            <TextView
                android:id="@+id/userPhone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="186dp"
                tools:layout_editor_absoluteY="89dp" />

            <TextView
                android:id="@+id/useMail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="6dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".01" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.99" />

            <TextView
                android:id="@+id/companyName_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="4dp"
                tools:layout_editor_absoluteY="32dp" />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="96dp" />

            <TextView
                android:id="@+id/website_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="128dp" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                app:constraint_referenced_ids="userName_tv,useMail_tv,companyName_tv,userPhone_tv,address_tv,website_tv"
                app:flow_horizontalAlign="start"
                app:flow_verticalGap="4dp"
                app:flow_verticalStyle="spread"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>